# ayesha-os

./: .gitignore  AGENTS.md  README.md  STATUS.md  ayesha.bat  ayesha.json  opencode.json  progress.json
applets/bring-to-life/: App.tsx  metadata.json
applets/cosmic-rag/: README.md
applets/desktop-cat/: desktopcat.py  requirements.txt
bring-to-life/: README.md  package.json  vite.config.ts
core/: README.md  app.py  ayesha_hive_client.py  ayesha_mobile_api.py  ayesha_sync.py  mobile_app.py  mobile_app_hive_integrated.py  requirements.txt  tri_node_mind.py
cosmic-rag/: main.py  readme
desktop-cat/: README.md  desktopcat.py
engine/: Cargo.toml  README.md  build.rs  config.json  pixel_art_generator.py  run.bat  run_ayesha.bat
engine/.cargo/: config.toml
engine/src/: applet_manager.rs  ayesha.rc  main.rs  main.txt  memory.rs  model_registry.rs  ollama.rs  prompt_refinement.rs  sandbox.rs  self_analysis.rs  tool_evolution.rs  tools.rs  ui.rs
engine/src/pixel_striker/: character.rs  mod.rs  object.rs  palette.rs  renderer.rs  tileset.rs
flora-cli/: README.md  caledonian-cli.js  cli.ts  package.json  server.ts
git_middleware/: __init__.py  auth.py  config.json  main.py  models.py  requirements.txt  router.py  tasks.py  webhook.py
models/: Modelfile  README.md
neural-strike/: config.py  run.bat
screen/: README.md
screenshotai/: README.md  main.py
scripts/: launcher.py  space-app.py  sync-all.ps1
tri_mind_sync/: __init__.py  cli.py  config.py  conflict.py  engine.py  github_sync.py  huggingface_sync.py  local_sync.py  models.py
(+44 files in other folders)
