[package]
name = "ayesha-engine"
version = "0.1.0"
edition = "2021"
description = "terminal-native persona host with tool-calling for ollama"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
base64 = "0.22"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
dirs = "5"
image = "0.25"
arboard = "3"

[build-dependencies]
winresource = "0.1"
